...
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="15dp"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageUpload"
        android:layout_width="wrap_content"
        android:layout_height="329dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/background"
...
