...
            android:layout_height="40dp"
            android:layout_below="@+id/up"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"></Button>

        <Button
            android:id="@+id/right"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/up"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15dp"
...
